--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,4 @@
 .sconsign.dblite
 Neptune.xccheckout
 Build/Targets/universal-apple-macosx/build
-Build/Targets/universal-apple-macosx/Neptune.xcodeproj/project.xcworkspace/xcuserdata/gilles.xcuserdatad
-Build/Targets/universal-apple-macosx/Neptune.xcodeproj/xcuserdata
+xcuserdata
