--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ Build/Targets/x86-unknown-linux/Debug
 Build/Targets/arm-unknown-linux/Debug
 Build/Targets/universal-apple-macosx/Neptune.xcodeproj/xcuserdata
 Build/Targets/universal-apple-macosx/cov-int
+Neptune.xcscmblueprint
+Build/Targets/x86-microsoft-win32-vs2010/Neptune/Debug
