--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .DS_Store
 .svn
 .sconsign.dblite
+*.pyc
+*.suo
 Neptune.xccheckout
 Build/Targets/universal-apple-macosx/build
 xcuserdata
@@ -14,6 +16,9 @@ Build/Targets/arm-unknown-linux/Debug
 Build/Targets/universal-apple-macosx/Neptune.xcodeproj/xcuserdata
 Build/Targets/universal-apple-macosx/cov-int
 Neptune.xcscmblueprint
-Build/Targets/x86-microsoft-win32-vs2010/Neptune/Debug
-Build/Targets/arm-android-linux/Debug
-Build/Targets/arm-android-linux/Release
+Build/Targets/x86-microsoft-win32-vs2010/Debug/
+Build/Targets/x86-microsoft-win32-vs2010/**/Debug/
+Build/Targets/arm-android-linux/Debug/
+Build/Targets/arm-android-linux/Release/
+Build/Targets/**/Debug/
+Build/Targets/**/Release/
